fix: adjust padding in card icon container for better alignment

--- a/wp-content/themes/aras-base/frontend/src/styles/scss/_cards.scss
+++ b/wp-content/themes/aras-base/frontend/src/styles/scss/_cards.scss
@@ -481,7 +481,7 @@
 
             .card-icon-container {
                 width: calc(2.1rem + 60px);
-                padding: 2.1rem 0 2.1rem 2.1rem;
+                padding: 2.1rem 0 2.1rem 0rem;
 
                 .card-icon {
                     width: 60px;
